--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Website Baru</h1>
     <h2>KONTEN</h2>
+    <div><img src="" alt=""></div> 
+    <p>hujan deres cuy</p>
 </body>
 </html>
